--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Braxton - Personal Portfolio & Resume HTML Template</title>
 
     <!-- Meta Tags -->
-    <meta name="description" content="Show yourself brightly with Braxton - unique and creative portfolio and resume template!">
-    <meta name="keywords" content="mix_design, resume, portfolio, personal page, cv, template, one page, responsive, html5, css3, creative, clean">
-    <meta name="author" content="mix_design">
+    <meta name="description" content="Create your website and your E-store with an Expert WordPress Developer!">
+    <meta name="keywords" content="mix_design, portfolio, personal page, template, website, WordPress, Woocommerce, E-Store, Blog, one page, responsive, html5, css3, creative, clean">
+    <meta name="author" content="Zied Mbarki">
 
     <!-- Viewport Meta-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
