--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
 
     <!-- Page Title -->
-    <title>Braxton - Personal Portfolio & Resume HTML Template</title>
+   <title>ZiedMbarki - Personal Portfolio</title>
 
     <!-- Meta Tags -->
     <meta name="description" content="Create your website and your E-store with an Expert WordPress Developer!">
